Section tarifs, title + meta

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Vulpiani Nathan - Webdesigner</title>
+    <title>Nathan Vulpiani | UI/UX Designer & Créateur de Sites Web</title>
+
+    <meta
+      name="description"
+      content="Développeur web et UI/UX Designer freelance. Je conçois des sites web sur-mesure, performants et esthétiques pour propulser votre entreprise. Demandez un devis."
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
